--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: July Galindo - ThinkTech
 description: ColOmbian - Lawyer + studies & researcher in Digital Technologies Law and Public Policy. Creative. Sharer. Contributor. Assertive. Content English+Spanish.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/julygalindo/jekyll-now/master/images/jekyll-logo.png
+avatar: https://avatars3.githubusercontent.com/u/55280953?s=400&u=1028d1bb7c6111e19cf6f23d9456cc9ef34e5161&v=4
 
 #
 # Flags below are optional
@@ -23,7 +23,7 @@ footer-links:
   flickr:
   github: barryclark/jekyll-now
   instagram:
-  linkedin: https://www.linkedin.com/in/july-galindo-q-13404537
+  linkedin: https://www.linkedin.com/in/julygalindoq
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: julesgq
