--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ footer-links:
   flickr:
   github: barryclark/jekyll-now
   instagram:
-  linkedin: https://www.linkedin.com/in/julygalindoq
+  linkedin: linkedin.com/in/julygalindoq
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: julesgq
