--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: julygalindo/jekyll-now
   instagram:
   linkedin: linkedin.com/in/julygalindoq
   pinterest:
