--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: July Galindo - ThinkTech
+name: July Galindo Quintero - ThinkTech
 
 # Short bio or description (displayed in the header)
 description: ColOmbian - Lawyer + studies & researcher in Digital Technologies Law and Public Policy. Creative. Sharer. Contributor. Assertive. Content English+Spanish.
