--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: July Galindo Quintero - ThinkTech
+name: July Galindo Quintero - Think-IN Tech
 
 # Short bio or description (displayed in the header)
-description: ColOmbian - Lawyer + studies & researcher in Digital Technologies Law and Public Policy. Creative. Sharer. Contributor. Assertive. Content English+Spanish.
+description: @PortMyData initiative | Law, Policy & Emerging Technologies | Independent scholar and consultant | Creative. Contributor. Assertive. Content English+Spanish.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars3.githubusercontent.com/u/55280953?s=400&u=1028d1bb7c6111e19cf6f23d9456cc9ef34e5161&v=4
