--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: July Galindo Quintero - Think-IN Tech
+name: July Galindo Quintero | Think-IN Tech
 
 # Short bio or description (displayed in the header)
 description: @PortMyData initiative | Law, Policy & Emerging Technologies | Independent scholar and consultant | Creative. Contributor. Assertive. Content English+Spanish.
