--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: July Galindo Quintero | Think-IN Tech
 
 # Short bio or description (displayed in the header)
-description: Law, Policy & Emerging Technologies, independent scholar and consultant - Creative. Contributor. Assertive. Content English+Spanish.
+description: PortMyData initiative - Law, Policy & Emerging Technologies, independent scholar and consultant - Creative. Contributor. Assertive. Content English+Spanish.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars3.githubusercontent.com/u/55280953?s=400&u=1028d1bb7c6111e19cf6f23d9456cc9ef34e5161&v=4
