--- a/_config.yml
+++ b/_config.yml
@@ -21,12 +21,12 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: julygalindo/jekyll-now
+  github: https://julygalindo.github.io
   instagram:
-  linkedin: linkedin.com/in/julygalindoq
+  linkedin: www.linkedin.com/in/julygalindoq
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: julesgq
+  twitter: https://twitter.com/JulesGQ
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
